--- a/footer.html
+++ b/footer.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+    <section class="footer-section">
     <footer>
         <div class="footer-content">
             <div class="footer-column">
@@ -39,5 +40,6 @@
         </div>
         <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
+    </section>
 </body>
 </html>
